Closed Bug 700643 Opened 14 years ago Closed 14 years ago

Windows power management messages shouldn't rely on hidden window

Categories

(Core :: Widget: Win32, defect)

x86
Windows 7
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla11

People

(Reporter: enndeakin, Assigned: enndeakin)

References

Details

Attachments

(1 file)

Attached patch patchSplinter Review
Instead, use a global to store what messages have been sent. As an aside, the documentation for WM_POWERBROADCAST says that several messages with different PBT_APMRESUME* values for wParam can be sent in sequence, which implies the existing code could send multiple notifications. Using a global also prevents this. I'm using a virtual machine and am not sure how to test any of this.
Attachment #572793 - Flags: review?(jmathies)
Side note, I'm working on a stand alone service that listens for these and supports observer events and a simple callback mechanism for bug 679240. I plan to move the code for this out of widget. (There's win and mac code currently that can be moved.)
Attachment #572793 - Flags: review?(jmathies) → review+
Status: ASSIGNED → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla11
Blocks: 71895
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: