Bug 700643, windows power management messages should not rely on hidden window, r=jmathies